--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@laphilosophia/opal",
-  "version": "1.0.0",
-  "description": "Secure, atomic, hybrid configuration store for Node.js applications",
+  "version": "1.1.0",
+  "description": "Secure, atomic, hybrid configuration store",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
